--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -13,7 +13,10 @@
         <form role="form" th:action="@{/login}" th:method="post">
             <h2>Pieslēgties</h2>
             <div class="form-group"><input class="form-control" name="username" type="email" placeholder="E-pasts"></div>
-            <div class="form-group"><input class="form-control" name="password" type="password" placeholder="Parole"></div>
+            <div class="form-group">
+                <input class="form-control" name="password" type="password" placeholder="Parole">
+                <p th:if="${error}" class="pError bg-danger">Nepareizs e-pasts vai parole!</p>
+            </div>
             <div class="form-group"><button class="btn btn-success btn-block" type="submit">Pieslēgties</button></div>
             <a href="/register">Neesi piereģistrējies? Spied šeit!</a>
         </form>
