--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -29,7 +29,7 @@
             <p class="pError bg-danger" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></p>
         </div>
         <div class="form-group"><button class="btn btn-success btn-block" type="submit">Reģistrēties</button></div>
-        <a href="/register">Esi jau reģistrējies? Spied šeit,lai pieslēgtos!</a>
+        <a href="/login">Esi jau reģistrējies? Spied šeit,lai pieslēgtos!</a>
     </form>
 </div>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
