--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -18,16 +18,16 @@
                         <a class="nav-link" href="/calendar">Spēļu kalendārs</a>
                     </li>
                     <li sec:authorize="hasAuthority('ADMIN')" class="nav-item">
-                        <a class="nav-link" href="/admin">Admin panel</a>
+                        <a class="nav-link" href="/admin">Administratora panelis</a>
                     </li>
                     <li sec:authorize="hasAnyAuthority('ADMIN','MANAGER')" class="nav-item">
-                        <a class="nav-link" href="/manager">Manager panel</a>
+                        <a class="nav-link" href="/manager">Menedžera panelis</a>
                     </li>
                     <li sec:authorize="hasAnyAuthority('ADMIN','PROTOCOLIST')" class="nav-item">
-                        <a class="nav-link" href="/protocolist">Protocolist panel</a>
+                        <a class="nav-link" href="/protocolist">Protokolista panelis</a>
                     </li>
                     <li sec:authorize="hasAnyAuthority('ADMIN','ORGANIZER')" class="nav-item">
-                        <a class="nav-link" href="/organizer">Organizer panel</a>
+                        <a class="nav-link" href="/organizer">Organizatora panelis</a>
                     </li>
                 </ul>
                 <div sec:authorize="isAnonymous()">
@@ -35,7 +35,7 @@
                 <a href="/login" class="btn btn-success my-2 my-sm-0">Pieslēgties</a>
                 </div>
                 <div sec:authorize="isAuthenticated()">
-                    <a href="/logout" class="btn btn-secondary my-2 my-sm-0">Profils</a>
+                    <a href="/profile" class="btn btn-secondary my-2 my-sm-0">Profils</a>
                     <a href="/logout" class="btn btn-danger my-2 my-sm-0">Atslēgties</a>
                 </div>
             </div>
