--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -52,3 +52,10 @@ a:hover{
 .card:hover{
     background:rgb(222, 222, 222);
 }
+.table{
+    background: white;
+    text-align: center;
+}
+.roles{
+    text-align: left;
+}
