added tournament nav link

--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -17,6 +17,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/calendar">Spēļu kalendārs</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/tournaments">Turnīri</a>
+                    </li>
                     <li sec:authorize="hasAuthority('ADMIN')" class="nav-item">
                         <a class="nav-link" href="/admin">Administratora panelis</a>
                     </li>
