edited that can add and remove organizer

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -11,11 +11,11 @@
 <body>
 <div class="container main">
     <div class="card-deck">
-        <a href="admin/addOrganizer" class="card col-md-6">
+        <a href="/admin/editOrganizer" class="card col-md-6">
         <div>
-            <i class="fas fa-user-plus card-img-top fa-9x"></i>
+            <i class="fas fa-user-edit card-img-top fa-9x"></i>
             <div class="card-body">
-                <h3>Pievienot turnīra organizatoru</h3>
+                <h3>Pievienot/Noņemt turnīra organizatoru</h3>
             </div>
         </div>
         </a>
