--- a/src/main/resources/templates/editOrganizer.html
+++ b/src/main/resources/templates/editOrganizer.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Pievienot turnīra organizatoru</title>
+    <title>Pievienot/Noņemt turnīra organizatoru</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/style.css">
 </head>
@@ -31,7 +31,10 @@
                     <li th:each="role : ${user.roles}" th:text="${role.name() + ' '}"></li>
                 </ul>
             </td>
-            <td><a class="btn btn-success" th:unless="${user.hasRole('ORGANIZER')}" th:href="@{'/admin/addOrganizer/'+${user.id}}">Pievienot turnīra organizatoriem</a> </td>
+            <td>
+                <a class="btn btn-success" th:unless="${user.hasRole('ORGANIZER')}" th:href="@{'editOrganizer/add/'+${user.id}}">Pievienot turnīra organizatoriem</a>
+                <a class="btn btn-danger" th:if="${user.hasRole('ORGANIZER')}" th:href="@{'editOrganizer/remove/'+${user.id}}">Noņemt no turnīra organizatoriem</a>
+            </td>
         </tr>
         </tbody>
     </table>
