--- a/src/main/resources/templates/organizer.html
+++ b/src/main/resources/templates/organizer.html
@@ -10,15 +10,17 @@
 <div class="sticky-top" th:insert="fragments/navbar.html"></div>
 <body>
 <div class="container main">
-    <div class="card-deck">
-        <a href="/organizer/createTournament" class="card col-md-6">
-            <div>
-                <i class="fas fa-trophy card-img-top fa-9x"></i>
-                <div class="card-body">
-                    <h3>Izveidot turnīru</h3>
+    <div class="container">
+        <div class="row cards">
+            <a href="/organizer/createTournament" class="card col-lg-6">
+                <div>
+                    <i class="fas fa-trophy card-img-top fa-9x"></i>
+                    <div class="card-body">
+                        <h3>Izveidot turnīru</h3>
+                    </div>
                 </div>
-            </div>
-        </a>
+            </a>
+        </div>
     </div>
 </div>
 <script src="https://kit.fontawesome.com/a076d05399.js"></script>
