moved views to folders to tidy up resources folder

--- a/src/main/resources/templates/manager/manager.html
+++ b/src/main/resources/templates/manager/manager.html
@@ -20,6 +20,14 @@
                     </div>
                 </div>
             </a>
+            <a th:if="${managerHasTeam}==true" href="/manager/team" class="card col-lg-12">
+                <div>
+                    <i class="fas fa-user-friends card-img-top fa-9x"></i>
+                    <div class="card-body">
+                        <h3>Apskatīt komandu</h3>
+                    </div>
+                </div>
+            </a>
         </div>
     </div>
 </div>
