--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -39,6 +39,11 @@ a:hover{
     padding-bottom: 20px;
     background:rgba(224, 224, 224, 0.85);
 }
+.container.info{
+    background: white;
+    padding: 20px;
+    border-radius: 8px;
+}
 .card{
     padding-top: 20px;
     text-align: center;
@@ -56,7 +61,7 @@ a:hover{
     background: white;
     text-align: center;
 }
-.roles{
+li{
     text-align: left;
 }
 #addPlayer{
