--- a/src/main/resources/templates/organizer/showTeams.html
+++ b/src/main/resources/templates/organizer/showTeams.html
@@ -3,26 +3,27 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Turnīri</title>
+    <title>Pievienot komandas turnīram</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <div class="sticky-top" th:insert="fragments/navbar.html"></div>
 <body>
 <div class="container main">
-    <h2>Turnīri</h2>
-    <table id="tournaments" class="table table-striped table-bordered">
+    <h2>Komandu saraksts</h2>
+    <table id="users" class="table table-striped table-bordered">
         <thead>
         <tr>
-            <th>Turnīra nosaukums</th>
+            <th>Komandas nosaukums</th>
             <th></th>
         </tr>
         </thead>
         <tbody>
-        <tr th:each="tournament : ${tournaments}">
-            <td th:text="${tournament.name}"></td>
+        <tr th:each="team : ${teams}">
+            <td th:text="${team.name}"></td>
             <td>
-                <a class="btn btn-info" th:href="@{'/tournaments/'+${tournament.id}}">Turnīra informācija</a>
+                <a class="btn btn-success" th:unless="${team.tournaments.contains(tournament)}" th:href="@{'editTeams/'+${team.id}+'/add'}">Pievienot komandu turnīram</a>
+                <a class="btn btn-danger" th:if="${team.tournaments.contains(tournament)}" th:href="@{'editTeams/'+${team.id}+'/remove'}">Noņemt komandu no turnīra</a>
             </td>
         </tr>
         </tbody>
