--- a/src/main/resources/templates/organizer/tournaments.html
+++ b/src/main/resources/templates/organizer/tournaments.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Turnīri</title>
+    <title>Organizētie turnīri</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/style.css">
 </head>
@@ -15,6 +15,7 @@
         <thead>
         <tr>
             <th>Turnīra nosaukums</th>
+            <th>Komandas</th>
             <th></th>
         </tr>
         </thead>
@@ -22,7 +23,12 @@
         <tr th:each="tournament : ${tournaments}">
             <td th:text="${tournament.name}"></td>
             <td>
-                <a class="btn btn-info" th:href="@{'/tournaments/'+${tournament.id}}">Turnīra informācija</a>
+                <ul th:each="team:${tournament.teams}">
+                    <li th:text="${team.name}"></li>
+                </ul>
+            </td>
+            <td>
+                <a class="btn btn-warning" th:href="@{'tournaments/'+${tournament.id}+'/editTeams'}">Pievienot/Noņemt komandas</a>
             </td>
         </tr>
         </tbody>
