--- a/src/main/resources/templates/tournament.html
+++ b/src/main/resources/templates/tournament.html
@@ -3,32 +3,49 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Organizatora panelis</title>
+    <title>Turnīrs</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <div class="sticky-top" th:insert="fragments/navbar.html"></div>
 <body>
 <div class="container main">
-    <div class="container">
-        <div class="row cards">
-            <a href="/organizer/createTournament" class="card col-lg-6">
-                <div>
-                    <i class="fas fa-trophy card-img-top fa-9x"></i>
-                    <div class="card-body">
-                        <h3>Izveidot turnīru</h3>
-                    </div>
-                </div>
-            </a>
-            <a href="/organizer/tournaments" class="card col-lg-6">
-                <div>
-                    <i class="fas fa-list card-img-top fa-9x"></i>
-                    <div class="card-body">
-                        <h3>Apskatīt izveidotos turnīrus</h3>
-                    </div>
-                </div>
-            </a>
-        </div>
+    <div class="container info">
+        <h4 th:text="${tournament.name}"></h4>
+        <h6>Komandas</h6>
+        <table class="table">
+            <thead>
+            <tr>
+                <th>Komandas nosaukums</th>
+                <th></th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="team:${tournament.teams}">
+                <td th:text="${team.name}"></td>
+            </tr>
+            </tbody>
+        </table>
+
+        <hr>
+
+        <h6>Spēļu kalendārs</h6>
+        <table class="table">
+            <thead>
+            <tr>
+                <th>Mājas komanda</th>
+                <th>Viesu komanda</th>
+                <th>Datums</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="game:${tournament.games}">
+                <td th:text="${game.homeTeam}"></td>
+                <td th:text="${game.awayTeam}"></td>
+                <td th:text="${game.date}"></td>
+            </tr>
+            </tbody>
+        </table>
     </div>
 </div>
 <script src="https://kit.fontawesome.com/a076d05399.js"></script>
