--- a/src/main/resources/templates/manager/addPlayer.html
+++ b/src/main/resources/templates/manager/addPlayer.html
@@ -10,7 +10,7 @@
 <div class="sticky-top" th:insert="fragments/navbar.html"></div>
 <body>
 <div class="container main">
-    <form role="form" th:action="@{'/manager/team/addPlayer/'}" th:object="${player}" th:method="post">
+    <form role="form" th:action="@{'/manager/team/addPlayer'}" th:object="${player}" th:method="post">
         <h2>Izveidot spēlētāju</h2>
         <div class="form-group">
             <h6>Vārds</h6>
