--- a/src/main/resources/templates/organizer/showTeams.html
+++ b/src/main/resources/templates/organizer/showTeams.html
@@ -10,6 +10,7 @@
 <div class="sticky-top" th:insert="fragments/navbar.html"></div>
 <body>
 <div class="container main">
+    <div class="container info">
     <h2>Komandu saraksts</h2>
     <table id="users" class="table table-striped table-bordered">
         <thead>
@@ -22,12 +23,14 @@
         <tr th:each="team : ${teams}">
             <td th:text="${team.name}"></td>
             <td>
-                <a class="btn btn-success" th:unless="${team.tournaments.contains(tournament)}" th:href="@{'editTeams/'+${team.id}+'/add'}">Pievienot komandu turnīram</a>
-                <a class="btn btn-danger" th:if="${team.tournaments.contains(tournament)}" th:href="@{'editTeams/'+${team.id}+'/remove'}">Noņemt komandu no turnīra</a>
+                <a class="btn btn-success" th:unless="${team.tournaments.contains(tournament)}" th:href="@{'/organizer/tournaments/'+${tournament.id}+'/editTeams/'+${team.id}+'/add'}">Pievienot komandu turnīram</a>
+                <a class="btn btn-danger" th:if="${team.tournaments.contains(tournament)}" th:href="@{'/organizer/tournaments/'+${tournament.id}+'/editTeams/'+${team.id}+'/remove'}">Noņemt komandu no turnīra</a>
             </td>
         </tr>
         </tbody>
     </table>
+    <a class="btn btn-info" th:href="@{'/organizer/tournaments/'+${tournament.id}}">Atpakaļ uz turnīra informāciju</a>
+    </div>
 </div>
 <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
