--- a/src/main/resources/templates/tournaments.html
+++ b/src/main/resources/templates/tournaments.html
@@ -10,8 +10,9 @@
 <div class="sticky-top" th:insert="fragments/navbar.html"></div>
 <body>
 <div class="container main">
+    <div class="container info">
     <h2>Turnīri</h2>
-    <table id="tournaments" class="table table-striped table-bordered">
+    <table id="tournaments" class="table table-striped table-bordered" th:unless="${#sets.isEmpty(tournaments)}">
         <thead>
         <tr>
             <th>Turnīra nosaukums</th>
@@ -27,6 +28,8 @@
         </tr>
         </tbody>
     </table>
+    <h3 th:if="${#sets.isEmpty(tournaments)}">Pašlaik nav nevienu aktīvu turnīru!</h3>
+    </div>
 </div>
 <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
