--- a/src/main/resources/templates/manager/playerForm.html
+++ b/src/main/resources/templates/manager/playerForm.html
@@ -3,15 +3,14 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Labot spēlētāju</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <div class="sticky-top" th:insert="fragments/navbar.html"></div>
 <body>
 <div class="container main">
-    <form role="form" th:action="@{'/manager/team/editPlayer/'+${player.id}}" th:object="${player}" th:method="post">
-        <h2>Izveidot komandu</h2>
+    <form role="form" th:action="@{'/manager/team/player'}" th:object="${player}" th:method="post">
+        <input type="hidden" th:field="*{id}"/>
         <div class="form-group">
             <h6>Vārds</h6>
             <input class="form-control" th:field="*{name}" name="name" type="text">
