--- a/src/main/resources/templates/organizer/gameForm.html
+++ b/src/main/resources/templates/organizer/gameForm.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Izveidot spēli</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/style.css">
 </head>
@@ -11,8 +10,8 @@
 <body>
 <div class="container main">
     <div class="container info">
-    <form role="form" th:action="@{'/organizer/tournaments/'+${tournamentId}+'/createGame'}" th:object="${game}" th:method="post">
-        <h2>Izveidot spēli</h2>
+    <form role="form" th:action="@{'/organizer/tournaments/'+${tournamentId}+'/game'}" th:object="${game}" th:method="post">
+        <input type="hidden" th:field="*{id}"/>
         <div class="form-group">
             <h6>Mājas komanda</h6>
             <select class="form-control" th:field="*{homeTeam}">
@@ -43,7 +42,7 @@
             <p class="pError bg-danger" th:if="${#fields.hasErrors('date')}" th:errors="*{date}"></p>
         </div>
         <div class="form-group">
-            <button class="btn btn-success btn-block" type="submit">Pievienot spēli</button>
+            <button class="btn btn-success btn-block" type="submit">Saglabāt spēli</button>
         </div>
     </form>
     </div>
