--- a/src/main/resources/templates/manager/createTeam.html
+++ b/src/main/resources/templates/manager/createTeam.html
@@ -17,7 +17,7 @@
                 <input class="form-control" th:field="*{name}" name="name" type="text" placeholder="Komandas nosaukums">
                 <p class="pError bg-danger" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></p>
             </div>
-            <div class="form-group" th:each="i:${#numbers.sequence(0,5)}">
+            <div class="form-group" th:each="i:${#numbers.sequence(0,size)}">
                 <h3 th:text="'Pievienot '+${i+1}+'.spēlētāju'"></h3>
                 <div class="form-group">
                     <input class="form-control" type="text" th:field="*{players[__${i}__].name}" placeholder="Spēlētāja vārds"/>
