--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -33,6 +33,7 @@ a:hover{
     border-radius: 2px;
     margin-top: 5px;
     font-size: smaller;
+    padding: 5px 10px 5px 10px;
 }
 .container.main{
     padding-top: 20px;
