--- a/src/main/resources/templates/manager/createTeam.html
+++ b/src/main/resources/templates/manager/createTeam.html
@@ -1,13 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Izveidot komandu</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/style.css">
-</head>
-<div class="sticky-top" th:insert="fragments/navbar.html"></div>
+<th:block th:insert="fragments/head ::head"></th:block>
+<th:block th:insert="fragments/navbar :: header"></th:block>
 <body>
 <div class="container main">
     <div class="container info">
@@ -20,28 +14,32 @@
             <div class="form-group" th:each="i:${#numbers.sequence(0,size)}">
                 <h3 th:text="'Pievienot '+${i+1}+'.spēlētāju'"></h3>
                 <div class="form-group">
-                    <input class="form-control" type="text" th:field="*{players[__${i}__].name}" placeholder="Spēlētāja vārds"/>
-                    <p class="pError bg-danger" th:if="${#fields.hasErrors('players['+i+'].name')}" th:errors="*{players[__${i}__].name}"></p>
+                    <input class="form-control" type="text" th:field="*{players[__${i}__].name}"
+                           placeholder="Spēlētāja vārds"/>
+                    <p class="pError bg-danger" th:if="${#fields.hasErrors('players['+i+'].name')}"
+                       th:errors="*{players[__${i}__].name}"></p>
                 </div>
                 <div class="form-group">
-                    <input class="form-control" type="text" th:field="*{players[__${i}__].surname}" placeholder="Spēlētāja uzvārds"/>
-                    <p class="pError bg-danger" th:if="${#fields.hasErrors('players['+i+'].surname')}" th:errors="*{players[__${i}__].surname}"></p>
+                    <input class="form-control" type="text" th:field="*{players[__${i}__].surname}"
+                           placeholder="Spēlētāja uzvārds"/>
+                    <p class="pError bg-danger" th:if="${#fields.hasErrors('players['+i+'].surname')}"
+                       th:errors="*{players[__${i}__].surname}"></p>
                 </div>
                 <div class="form-group">
-                    <input class="form-control" type="text" th:field="*{players[__${i}__].position}" placeholder="Spēlētāja pozīcija"/>
-                    <p class="pError bg-danger" th:if="${#fields.hasErrors('players['+i+'].position')}" th:errors="*{players[__${i}__].position}"></p>
+                    <input class="form-control" type="text" th:field="*{players[__${i}__].position}"
+                           placeholder="Spēlētāja pozīcija"/>
+                    <p class="pError bg-danger" th:if="${#fields.hasErrors('players['+i+'].position')}"
+                       th:errors="*{players[__${i}__].position}"></p>
                 </div>
             </div>
             <div class="morePlayers"></div>
             <a class="btn btn-primary btn-block" id="addPlayer">Pievienot spēlētāju.</a>
-            <div class="form-group"><button class="btn btn-success btn-block" type="submit">Izveidot komandu</button></div>
+            <div class="form-group">
+                <button class="btn btn-success btn-block" type="submit">Izveidot komandu</button>
+            </div>
         </form>
     </div>
 </div>
-
-<script src="https://kit.fontawesome.com/a076d05399.js"></script>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-<script type="text/javascript" src="/js/script.js"></script>
+<th:block th:insert="fragments/script :: scripts"></th:block>
 </body>
 </html>
