--- a/src/main/resources/templates/organizer/showTeams.html
+++ b/src/main/resources/templates/organizer/showTeams.html
@@ -1,40 +1,39 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Pievienot komandas turnīram</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/style.css">
-</head>
-<div class="sticky-top" th:insert="fragments/navbar.html"></div>
+<th:block th:insert="fragments/head ::head"></th:block>
+<th:block th:insert="fragments/navbar :: header"></th:block>
 <body>
 <div class="container main">
     <div class="container info">
-    <h2>Komandu saraksts</h2>
-    <table id="users" class="table table-striped table-bordered">
-        <thead>
-        <tr>
-            <th>Komandas nosaukums</th>
-            <th></th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="team : ${teams}">
-            <td th:text="${team.name}"></td>
-            <td>
-                <a class="btn btn-success" th:unless="${team.tournaments.contains(tournament)}" th:href="@{'/organizer/tournaments/'+${tournament.id}+'/editTeams/'+${team.id}+'/add'}">Pievienot komandu turnīram</a>
-                <a class="btn btn-danger" th:if="${team.tournaments.contains(tournament)} and not ${gameTeams.contains(team)}" th:href="@{'/organizer/tournaments/'+${tournament.id}+'/editTeams/'+${team.id}+'/remove'}">Noņemt komandu no turnīra</a>
-                <a class="btn btn-danger disabled" th:if="${gameTeams.contains(team)}">Nevar noņemt! Eksistē spēles</a>
-            </td>
-        </tr>
-        </tbody>
-    </table>
-    <a class="btn btn-info" th:href="@{'/organizer/tournaments/'+${tournament.id}}">Atpakaļ uz turnīra informāciju</a>
+        <h2>Komandu saraksts</h2>
+        <table id="users" class="table table-striped table-bordered">
+            <thead>
+            <tr>
+                <th>Komandas nosaukums</th>
+                <th></th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="team : ${teams}">
+                <td th:text="${team.name}"></td>
+                <td>
+                    <a class="btn btn-success" th:unless="${team.tournaments.contains(tournament)}"
+                       th:href="@{'/organizer/tournaments/'+${tournament.id}+'/editTeams/'+${team.id}+'/add'}">Pievienot
+                        komandu turnīram</a>
+                    <a class="btn btn-danger"
+                       th:if="${team.tournaments.contains(tournament)} and not ${gameTeams.contains(team)}"
+                       th:href="@{'/organizer/tournaments/'+${tournament.id}+'/editTeams/'+${team.id}+'/remove'}">Noņemt
+                        komandu no turnīra</a>
+                    <a class="btn btn-danger disabled" th:if="${gameTeams.contains(team)}">Nevar noņemt! Eksistē
+                        spēles</a>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+        <a class="btn btn-info" th:href="@{'/organizer/tournaments/'+${tournament.id}}">Atpakaļ uz turnīra
+            informāciju</a>
     </div>
 </div>
-<script src="https://kit.fontawesome.com/a076d05399.js"></script>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+<th:block th:insert="fragments/script :: scripts"></th:block>
 </body>
 </html>
