--- a/src/main/resources/templates/protocolist/protocolist.html
+++ b/src/main/resources/templates/protocolist/protocolist.html
@@ -1,43 +1,37 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Protokolista spēles</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/style.css">
-</head>
-<div class="sticky-top" th:insert="fragments/navbar.html"></div>
+<th:block th:insert="fragments/head ::head"></th:block>
+<th:block th:insert="fragments/navbar :: header"></th:block>
 <body>
 <div class="container main">
     <div class="container info">
-    <table id="tournaments" class="table table-striped table-bordered">
-        <thead>
-        <tr>
-            <th>Mājas komanda</th>
-            <th>Viesu komanda</th>
-            <th>Rezultāts</th>
-            <th>Datums</th>
-            <th></th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="game : ${games}">
-            <td th:text="${game.homeTeam.name}"></td>
-            <td th:text="${game.awayTeam.name}"></td>
-            <td th:text="${game.homeTeamGoals}+' : '+${game.awayTeamGoals}"></td>
-            <td th:text="${#dates.format(game.date, 'dd-MM-yyyy HH:mm')}"></td>
-            <td>
-                <a class="btn btn-success" th:unless="${game.ended}" th:href="@{'/protocolist/game/'+${game.id}+'/addProtocol'}">Ievadīt spēles protokolu</a>
-                <a class="btn btn-warning" th:if="${game.ended}" th:href="@{'/protocolist/game/'+${game.id}+'/editProtocol'}">Labot spēles protokolu</a>
-            </td>
-        </tr>
-        </tbody>
-    </table>
+        <table id="tournaments" class="table table-striped table-bordered">
+            <thead>
+            <tr>
+                <th>Mājas komanda</th>
+                <th>Viesu komanda</th>
+                <th>Rezultāts</th>
+                <th>Datums</th>
+                <th></th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="game : ${games}">
+                <td th:text="${game.homeTeam.name}"></td>
+                <td th:text="${game.awayTeam.name}"></td>
+                <td th:text="${game.homeTeamGoals}+' : '+${game.awayTeamGoals}"></td>
+                <td th:text="${#dates.format(game.date, 'dd-MM-yyyy HH:mm')}"></td>
+                <td>
+                    <a class="btn btn-success" th:unless="${game.ended}"
+                       th:href="@{'/protocolist/game/'+${game.id}+'/addProtocol'}">Ievadīt spēles protokolu</a>
+                    <a class="btn btn-warning" th:if="${game.ended}"
+                       th:href="@{'/protocolist/game/'+${game.id}+'/editProtocol'}">Labot spēles protokolu</a>
+                </td>
+            </tr>
+            </tbody>
+        </table>
     </div>
 </div>
-<script src="https://kit.fontawesome.com/a076d05399.js"></script>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+<th:block th:insert="fragments/script :: scripts"></th:block>
 </body>
 </html>
