--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,13 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Reģistrēties</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/style.css">
-</head>
-<div class="sticky-top" th:insert="fragments/navbar.html"></div>
+<th:block th:insert="fragments/head ::head"></th:block>
+<th:block th:insert="fragments/navbar :: header"></th:block>
 <body>
 <div class="login">
     <form role="form" th:action="@{/register}" th:object="${user}" th:method="post">
@@ -28,12 +22,12 @@
             <input class="form-control" th:field="*{password}" name="password" type="password" placeholder="Parole">
             <p class="pError bg-danger" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></p>
         </div>
-        <div class="form-group"><button class="btn btn-success btn-block" type="submit">Reģistrēties</button></div>
+        <div class="form-group">
+            <button class="btn btn-success btn-block" type="submit">Reģistrēties</button>
+        </div>
         <a href="/login">Esi jau reģistrējies? Spied šeit,lai pieslēgtos!</a>
     </form>
 </div>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+<th:block th:insert="fragments/script :: scripts"></th:block>
 </body>
-
 </html>
