added that can delete player only if there are minimum 6 players left after exact player deletion

--- a/src/main/resources/templates/manager/team.html
+++ b/src/main/resources/templates/manager/team.html
@@ -26,7 +26,7 @@
                     spēlētāju</a>
             </td>
             <td>
-                <a class="btn btn-danger btn-block" th:href="@{'/manager/team/deletePlayer/'+${player.id}}">Dzēst
+                <a class="btn btn-danger btn-block" th:unless="${#lists.size(team.players)<7}" th:href="@{'/manager/team/deletePlayer/'+${player.id}}">Dzēst
                     spēlētāju</a>
             </td>
         </tr>
