--- a/src/main/resources/templates/protocolist/protocolist.html
+++ b/src/main/resources/templates/protocolist/protocolist.html
@@ -5,7 +5,8 @@
 <body>
 <div class="container main">
     <div class="container info">
-        <table id="tournaments" class="table table-striped table-bordered">
+        <h3 th:if="${#sets.isEmpty(games)}">Pašlaik nav nevienu Jums piešķirtu protokolējamu spēļu</h3>
+        <table id="tournaments" class="table table-striped table-bordered" th:unless="${#sets.isEmpty(games)}">
             <thead>
             <tr>
                 <th>Mājas komanda</th>
